# SR

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: matrix_info.json
src/: __init__.py  baseline.py  data_loader.py  evaluation.py  verify_submission.py
submissions/: iteracion_0_info.json
