[project]
name = "spotify-recommender"
version = "0.1.0"
description = "Spotify Million Playlist Challenge - Iteration 0: Popularity-based Recommender System"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Nicolas Aller", email = "nicolas.aller@udc.es"}
]
dependencies = [
"numpy",
"scipy",
"pandas"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]